--- a/webapp/Templates/bienvenido.html
+++ b/webapp/Templates/bienvenido.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Bienvenido a Sistema de Administracion de Personas</title>
+    <title>Bienvenido</title>
 </head>
 <body>
+<h1>Bienvenido a Sistema de Administracion de Personas </h1>
 
 </body>
 </html>
